--- a/css/thumbnail-gallery.css
+++ b/css/thumbnail-gallery.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+    /*padding-top: 70px; *//* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
 }
 .thumb {
     margin-bottom: 0px;
